parser.output
Terminals unused in grammar

   NOT


State 21 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: Expressions

    2 Expressions: Expression
    3            | Expressions Expression

    4 Expression: Identifier EQ Expression
    5           | Identifier L_PAREN Call_Args R_PAREN
    6           | Identifier
    7           | Constant
    8           | PrintExpresion
    9           | Function_Declaration
   10           | BinaryExpresion
   11           | L_PAREN Expression R_PAREN
   12           | IfElseExpression
   13           | FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | WHILE Expression Block
   15           | Block

   16 Block: L_BRACKET Expressions R_BRACKET
   17      | L_BRACKET R_BRACKET

   18 PrintExpresion: PRINT L_PAREN Call_Args R_PAREN

   19 Function_Declaration: FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block

   20 Function_Args_Declartion: /* empty */
   21                         | Identifier
   22                         | Function_Args_Declartion COMMA Identifier

   23 Call_Args: /* empty */
   24          | Expression
   25          | Call_Args COMMA Expression

   26 IfElseExpression: IF Expression Block ELSE Block

   27 Constant: DOUBLE
   28         | INTEGER
   29         | STRING

   30 BinaryExpresion: Expression MINUS Expression
   31                | Expression PLUS Expression
   32                | Expression MULTIPLY Expression
   33                | Expression MOD Expression
   34                | Expression DIVIDE Expression
   35                | Expression LESS_TH Expression
   36                | Expression LESS_TH_OR_EQ Expression
   37                | Expression GREATER_TH Expression
   38                | Expression GREATER_TH_OR_EQ Expression
   39                | Expression COMP_EQ Expression
   40                | Expression COMP_NEQ Expression
   41                | Expression AND Expression
   42                | Expression OR Expression

   43 Identifier: IDENTIFIER


Terminals, with rules where they appear

$end (0) 0
error (256)
IDENTIFIER (258) 43
INTEGER (259) 28
DOUBLE (260) 27
STRING (261) 29
EQ (262) 4
COMP_EQ (263) 39
COMP_NEQ (264) 40
LESS_TH (265) 35
GREATER_TH (266) 37
LESS_TH_OR_EQ (267) 36
GREATER_TH_OR_EQ (268) 38
PLUS (269) 31
MINUS (270) 30
DIVIDE (271) 34
MULTIPLY (272) 32
MOD (273) 33
SEMI_COLON (274) 13
COMMA (275) 22 25
FUNC (276) 19
L_PAREN (277) 5 11 18 19
R_PAREN (278) 5 11 18 19
L_BRACKET (279) 16 17
R_BRACKET (280) 16 17
PRINT (281) 18
IF (282) 26
ELSE (283) 26
FOR (284) 13
WHILE (285) 14
AND (286) 41
OR (287) 42
NOT (288)


Nonterminals, with rules where they appear

$accept (34)
    on left: 0
Program (35)
    on left: 1, on right: 0
Expressions (36)
    on left: 2 3, on right: 1 3 16
Expression (37)
    on left: 4 5 6 7 8 9 10 11 12 13 14 15, on right: 2 3 4 11 13 14
    24 25 26 30 31 32 33 34 35 36 37 38 39 40 41 42
Block (38)
    on left: 16 17, on right: 13 14 15 19 26
PrintExpresion (39)
    on left: 18, on right: 8
Function_Declaration (40)
    on left: 19, on right: 9
Function_Args_Declartion (41)
    on left: 20 21 22, on right: 19 22
Call_Args (42)
    on left: 23 24 25, on right: 5 18 25
IfElseExpression (43)
    on left: 26, on right: 12
Constant (44)
    on left: 27 28 29, on right: 7
BinaryExpresion (45)
    on left: 30 31 32 33 34 35 36 37 38 39 40 41 42, on right: 10
Identifier (46)
    on left: 43, on right: 4 5 6 19 21 22


State 0

    0 $accept: . Program $end
    1 Program: . Expressions
    2 Expressions: . Expression
    3            | . Expressions Expression
    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    Program               go to state 12
    Expressions           go to state 13
    Expression            go to state 14
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 1

   43 Identifier: IDENTIFIER .

    $default  reduce using rule 43 (Identifier)


State 2

   28 Constant: INTEGER .

    $default  reduce using rule 28 (Constant)


State 3

   27 Constant: DOUBLE .

    $default  reduce using rule 27 (Constant)


State 4

   29 Constant: STRING .

    $default  reduce using rule 29 (Constant)


State 5

   19 Function_Declaration: FUNC . Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1

    Identifier  go to state 22


State 6

    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   11           | L_PAREN . Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    Expression            go to state 23
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 7

    2 Expressions: . Expression
    3            | . Expressions Expression
    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   16      | L_BRACKET . Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   17      | L_BRACKET . R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    R_BRACKET   shift, and go to state 24
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    Expressions           go to state 25
    Expression            go to state 14
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 8

   18 PrintExpresion: PRINT . L_PAREN Call_Args R_PAREN

    L_PAREN  shift, and go to state 26


State 9

    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   26                 | IF . Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    Expression            go to state 27
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 10

    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   13           | FOR . Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    Expression            go to state 28
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 11

    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   14           | WHILE . Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    Expression            go to state 29
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 12

    0 $accept: Program . $end

    $end  shift, and go to state 30


State 13

    1 Program: Expressions .  [$end]
    3 Expressions: Expressions . Expression
    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    $default  reduce using rule 1 (Program)

    Expression            go to state 31
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 14

    2 Expressions: Expression .  [$end, IDENTIFIER, INTEGER, DOUBLE, STRING, FUNC, L_PAREN, L_BRACKET, R_BRACKET, PRINT, IF, FOR, WHILE]
   30 BinaryExpresion: Expression . MINUS Expression
   31                | Expression . PLUS Expression
   32                | Expression . MULTIPLY Expression
   33                | Expression . MOD Expression
   34                | Expression . DIVIDE Expression
   35                | Expression . LESS_TH Expression
   36                | Expression . LESS_TH_OR_EQ Expression
   37                | Expression . GREATER_TH Expression
   38                | Expression . GREATER_TH_OR_EQ Expression
   39                | Expression . COMP_EQ Expression
   40                | Expression . COMP_NEQ Expression
   41                | Expression . AND Expression
   42                | Expression . OR Expression

    COMP_EQ           shift, and go to state 32
    COMP_NEQ          shift, and go to state 33
    LESS_TH           shift, and go to state 34
    GREATER_TH        shift, and go to state 35
    LESS_TH_OR_EQ     shift, and go to state 36
    GREATER_TH_OR_EQ  shift, and go to state 37
    PLUS              shift, and go to state 38
    MINUS             shift, and go to state 39
    DIVIDE            shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    MOD               shift, and go to state 42
    AND               shift, and go to state 43
    OR                shift, and go to state 44

    $default  reduce using rule 2 (Expressions)


State 15

   15 Expression: Block .

    $default  reduce using rule 15 (Expression)


State 16

    8 Expression: PrintExpresion .

    $default  reduce using rule 8 (Expression)


State 17

    9 Expression: Function_Declaration .

    $default  reduce using rule 9 (Expression)


State 18

   12 Expression: IfElseExpression .

    $default  reduce using rule 12 (Expression)


State 19

    7 Expression: Constant .

    $default  reduce using rule 7 (Expression)


State 20

   10 Expression: BinaryExpresion .

    $default  reduce using rule 10 (Expression)


State 21

    4 Expression: Identifier . EQ Expression
    5           | Identifier . L_PAREN Call_Args R_PAREN
    6           | Identifier .  [$end, IDENTIFIER, INTEGER, DOUBLE, STRING, COMP_EQ, COMP_NEQ, LESS_TH, GREATER_TH, LESS_TH_OR_EQ, GREATER_TH_OR_EQ, PLUS, MINUS, DIVIDE, MULTIPLY, MOD, SEMI_COLON, COMMA, FUNC, L_PAREN, R_PAREN, L_BRACKET, R_BRACKET, PRINT, IF, FOR, WHILE, AND, OR]

    EQ       shift, and go to state 45
    L_PAREN  shift, and go to state 46

    L_PAREN   [reduce using rule 6 (Expression)]
    $default  reduce using rule 6 (Expression)


State 22

   19 Function_Declaration: FUNC Identifier . L_PAREN Function_Args_Declartion R_PAREN Block

    L_PAREN  shift, and go to state 47


State 23

   11 Expression: L_PAREN Expression . R_PAREN
   30 BinaryExpresion: Expression . MINUS Expression
   31                | Expression . PLUS Expression
   32                | Expression . MULTIPLY Expression
   33                | Expression . MOD Expression
   34                | Expression . DIVIDE Expression
   35                | Expression . LESS_TH Expression
   36                | Expression . LESS_TH_OR_EQ Expression
   37                | Expression . GREATER_TH Expression
   38                | Expression . GREATER_TH_OR_EQ Expression
   39                | Expression . COMP_EQ Expression
   40                | Expression . COMP_NEQ Expression
   41                | Expression . AND Expression
   42                | Expression . OR Expression

    COMP_EQ           shift, and go to state 32
    COMP_NEQ          shift, and go to state 33
    LESS_TH           shift, and go to state 34
    GREATER_TH        shift, and go to state 35
    LESS_TH_OR_EQ     shift, and go to state 36
    GREATER_TH_OR_EQ  shift, and go to state 37
    PLUS              shift, and go to state 38
    MINUS             shift, and go to state 39
    DIVIDE            shift, and go to state 40
    MULTIPLY          shift, and go to state 41
    MOD               shift, and go to state 42
    R_PAREN           shift, and go to state 48
    AND               shift, and go to state 43
    OR                shift, and go to state 44


State 24

   17 Block: L_BRACKET R_BRACKET .

    $default  reduce using rule 17 (Block)


State 25

    3 Expressions: Expressions . Expression
    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   16      | L_BRACKET Expressions . R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    R_BRACKET   shift, and go to state 49
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    Expression            go to state 31
    Block                 go to state 15
    PrintExpresion        go to state 16
    Function_Declaration  go to state 17
    IfElseExpression      go to state 18
    Constant              go to state 19
    BinaryExpresion       go to state 20
    Identifier            go to state 21


State 26

    4 Expression: . Identifier EQ Expression
    5           | . Identifier L_PAREN Call_Args R_PAREN
    6           | . Identifier
    7           | . Constant
    8           | . PrintExpresion
    9           | . Function_Declaration
   10           | . BinaryExpresion
   11           | . L_PAREN Expression R_PAREN
   12           | . IfElseExpression
   13           | . FOR Expression SEMI_COLON Expression SEMI_COLON Expression Block
   14           | . WHILE Expression Block
   15           | . Block
   16 Block: . L_BRACKET Expressions R_BRACKET
   17      | . L_BRACKET R_BRACKET
   18 PrintExpresion: . PRINT L_PAREN Call_Args R_PAREN
   18               | PRINT L_PAREN . Call_Args R_PAREN
   19 Function_Declaration: . FUNC Identifier L_PAREN Function_Args_Declartion R_PAREN Block
   23 Call_Args: .  [COMMA, R_PAREN]
   24          | . Expression
   25          | . Call_Args COMMA Expression
   26 IfElseExpression: . IF Expression Block ELSE Block
   27 Constant: . DOUBLE
   28         | . INTEGER
   29         | . STRING
   30 BinaryExpresion: . Expression MINUS Expression
   31                | . Expression PLUS Expression
   32                | . Expression MULTIPLY Expression
   33                | . Expression MOD Expression
   34                | . Expression DIVIDE Expression
   35                | . Expression LESS_TH Expression
   36                | . Expression LESS_TH_OR_EQ Expression
   37                | . Expression GREATER_TH Expression
   38                | . Expression GREATER_TH_OR_EQ Expression
   39                | . Expression COMP_EQ Expression
   40                | . Expression COMP_NEQ Expression
   41                | . Expression AND Expression
   42                | . Expression OR Expression
   43 Identifier: . IDENTIFIER

    IDENTIFIER  shift, and go to state 1
    INTEGER     shift, and go to state 2
    DOUBLE      shift, and go to state 3
    STRING      shift, and go to state 4
    FUNC        shift, and go to state 5
    L_PAREN     shift, and go to state 6
    L_BRACKET   shift, and go to state 7
    PRINT       shift, and go to state 8
    IF          shift, and go to state 9
    FOR         shift, and go to state 10
    WHILE       shift, and go to state 11

    $default  reduce using rule 23 (Call_Args)
